Restore JDK 1.4 compatibility (Integer.valueOf(int) requires JDK 1.5)
git-svn-id: https://svn.apache.org/repos/asf/commons/proper/sanselan/trunk@1003219 13f79535-47bb-0310-9956-ffa450edef68